# QtIrbis

./: .gitignore  .travis.yml  README.md  appveyor.yml  compile.bat  compile_xp.bat
Source/: All.pro  CMakeLists.txt  ClientInfo.cpp  ClientQuery.cpp  CommandCode.cpp  DatabaseInfo.cpp  EmbeddedField.cpp  FileSpecification.cpp  FoundLine.cpp  IniFile.cpp  IrbisConnection.cpp  IrbisDate.cpp  IrbisEncoding.cpp  IrbisFormat.cpp  IrbisProcessInfo.cpp  IrbisText.cpp  IrbisVersion.cpp  Iso2709.cpp  MarcRecord.cpp  MenuEntry.cpp  MenuFile.cpp  PostingParameters.cpp  ProtocolText.cpp  QtIrbis.cpp  QtIrbis.h  QtIrbis.pro  RawRecord.cpp  RecordField.cpp  SearchParameters.cpp  SearchScenario.cpp  ServerResponse.cpp  ServerStat.cpp  SubField.cpp  TermPosting.cpp  TextNavigator.cpp  UserInfo.cpp
Source/IrbisTests/: AllTests.cpp  CMakeLists.txt  ClientQueryTest.cpp  CommonTest.cpp  FileSpecificationTest.cpp  IlfFileTest.cpp  IrbisDateTest.cpp  IrbisEncodingTest.cpp  IrbisFormatTest.cpp  IrbisTests.h  IrbisTests.pro  IrbisTreeFileTest.cpp  MarcRecordTest.cpp  MstFile64Test.cpp  NumberTextTest.cpp  RecordFieldTest.cpp  StopWordsTest.cpp  SubFieldTest.cpp  TextNavigatorTest.cpp  pch.h
Source/OfflineTests/: AllTests.cpp  AlphabetTableTest.cpp  CMakeLists.txt  ClientQueryTest.cpp  DirectAccess64Test.cpp  FunctionTest.cpp  IlfFileTest.cpp  IrbisEncodingTest.cpp  Iso2709Test.cpp  MarcRecordTest.cpp  OfflineTests.h  OfflineTests.pro  RecordSerializerTest.cpp  SubFieldTest.cpp  XrfFile64Test.cpp  pch.h
Source/OnlineTests/: OnlineTests.pro  main.cpp
Source/QtIrbis/: AlphabetTable.cpp  Builder.cpp  CMakeLists.txt  ChunkedBuffer.cpp  ClientInfo.cpp  ClientQuery.cpp  CommandCode.cpp  ConnectionFactory.cpp  DatabaseInfo.cpp  DirectAccess64.cpp  EmbeddedField.cpp  FileSpecification.cpp  FoundLine.cpp  IlfEntry.cpp  IlfFile.cpp  IniFile.cpp  IrbisConnection.cpp  IrbisDate.cpp  IrbisEncoding.cpp  IrbisException.cpp  IrbisFileNotFoundException.cpp  Iso2709.cpp  (+42 more)
(+7 files in other folders)
